src/parser/snapshots/rex__parser__tests__snapshot_font_change-2.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathfrak{F+1}\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '𝔉',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '+',
                atom_type: Binary,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '1',
                atom_type: Alpha,
            },
        ),
    ],
)
