src/parser/snapshots/rex__parser__tests__snapshot_font_change-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathrm{\\mathtt{a}}\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '𝚊',
                atom_type: Alpha,
            },
        ),
    ],
)
