src/parser/snapshots/rex__parser__tests__snapshot_font_change-5.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathrm{\\frac 21}\")"
---
Ok(
    [
        GenFraction(
            GenFraction {
                numerator: [
                    Symbol(
                        Symbol {
                            codepoint: '2',
                            atom_type: Alpha,
                        },
                    ),
                ],
                denominator: [
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                ],
                bar_thickness: Default,
                left_delimiter: None,
                right_delimiter: None,
                style: NoChange,
            },
        ),
    ],
)
