src/parser/snapshots/rex__parser__tests__snapshot_font_change-6.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathbb aa\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '𝕒',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
    ],
)
