src/parser/snapshots/rex__parser__tests__snapshot_font_change.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathrm{a}\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: 'a',
                atom_type: Alpha,
            },
        ),
    ],
)
