src/parser/snapshots/rex__parser__tests__snapshot_frac-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\frac \\left(1\\right)2\")"
---
Err(
    ExpectedDelimiter,
)
