src/parser/snapshots/rex__parser__tests__snapshot_limits-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"a\\limits_1^2\")"
---
Err(
    LimitsMustFollowOperator,
)
