src/parser/snapshots/rex__parser__tests__snapshot_mbox-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"1^{\\mbox{a}}\")"
---
Ok(
    [
        Scripts(
            Scripts {
                base: Some(
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                ),
                superscript: Some(
                    [
                        Style(
                            Text,
                        ),
                        PlainText(
                            PlainText {
                                text: "a",
                            },
                        ),
                    ],
                ),
                subscript: None,
            },
        ),
    ],
)
