src/parser/snapshots/rex__parser__tests__snapshot_mbox.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mbox{abc}\")"
---
Ok(
    [
        Style(
            Text,
        ),
        PlainText(
            PlainText {
                text: "abc",
            },
        ),
    ],
)
