src/parser/snapshots/rex__parser__tests__snapshot_plain_text-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\text{\\{\\}1}1}\")"
---
Err(
    ExpectedEof(
        Symbol(
            '}',
        ),
    ),
)
