src/parser/snapshots/rex__parser__tests__snapshot_plain_text-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\text{}}\")"
---
Err(
    ExpectedEof(
        Symbol(
            '}',
        ),
    ),
)
